# Catroid

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CatroidCodingStyle.xml  FormulaEditorFragment.java  Jenkinsfile  Jenkinsfile.BuildStandalone  Jenkinsfile.ManualTests  Jenkinsfile.OutgoingNetworkCallsTests  Jenkinsfile.PullRequest  Jenkinsfile.PullRequestEspresso  Jenkinsfile.PullRequestIndependentAPK  Jenkinsfile.PullRequestStandaloneAPK  Jenkinsfile.SensorboxTests  Jenkinsfile.baseDocker  Jenkinsfile.buildDebugApks  Jenkinsfile.buildMetadata  Jenkinsfile.releaseAPK  README.md  avdstore.json  build.gradle  buildAPK.gradle  build_output.txt  changelog.txt  cloudflare.properties  codeStyleSettings.xml  code_quality_tasks.gradle  compile_errors.txt  compile_errors2.txt  compile_test_errors.txt  crowdin.yml  fmnsiguk.hfg.txt  git show HEAD~2  google-services.json  gradle.properties  jws3iipb.ihb.txt  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  onboarding.md
.run/: AndroidCoverageTest.run.xml  Catroid [clean].run.xml  Instrumented Unit Tests.run.xml  Pull Request Suite (Gradle).run.xml  Pull Request Suite + JaCoCo.run.xml  Pull Request Suite.run.xml  Quarantined Tests.run.xml  RTL Tests.run.xml  Static Code Analysis.run.xml  Testrunner Tests.run.xml  Unit Tests (with UI-Feedback).run.xml  Unit-Tests+JaCoCo.run.xml  Unit-Tests.run.xml
BugDescriptions/: .~lock.B17_string-resource-consistency.odt#  B17_string-resource-consistency.odt
PaintroidSourceTest/: .project  LicenseTest.java
PaintroidTest/: .classpath  .project  AndroidManifest.xml
Scratch2Android/: .classpath  .project  AndroidManifest.xml  KNOWN_BUGS.txt  default.properties
Scratch2AndroidTest/: .classpath  .project  AndroidManifest.xml
ScratchPlayer-Iulian/: .classpath  .project  LICENSE.txt  Notes.txt  dot.sb  test.html
catroid/src/main/jni/jnilibsvm/: CMakeLists.txt  common.h  jnilibsvm.cpp
catroid/src/main/jni/jnilibsvm/libsvm/: svm-predict.cpp  svm-predict.h  svm-scale.cpp  svm-scale.h  svm.cpp
catroid/src/main/jni/tensorflow_demo/: CMakeLists.txt  imageutils_jni.cc  prewhiten.cc  prewhiten.h
catroid/src/main/jni/tensorflow_demo/object_tracking/: geom.h  keypoint.h  object_detector.h  object_model.h  object_tracker.cc  object_tracker.h  object_tracker_jni.cc  time_log.cc  tracked_object.h
(+11909 files in other folders)
